--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@ layout: "default"
 ---
 <html>
 <body>
-	<ul>
-		{% for post in site.posts %}
-		<li>
-			<a href="{{ post.url }}">{{ post.title }}</a><br/>
-			{{ post.excerpt }}
-		</li>
-		{% endfor %}
-	</ul>
+  {% for post in site.posts %}
+    <p>
+      {{ page.date | date: "%B %-d, %Y" }}<br/>
+      <a href="{{ post.url }}">{{ post.title }}</a><br/>
+      {{ post.excerpt }}
+    </p>
+  {% endfor %}
 </body>
 </html>
